fixed spacing on dedicated card

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ input, select, textarea { font-size: 16px; font-family: "Montserrat", sans-serif
 /*       	DEDICATED AND MEETING SECTION     	  */
 .dedicated { min-height: 637px; margin-top: 84px; background-image: url("images/meeting.jpg"); background-repeat: no-repeat; filter: drop-shadow(0px 0px 9px #00000038); background-size: 60%; background-position: bottom right; margin-bottom: 124px; }
 .dedicated .card { min-height: 445px; min-width: 597px; width: 45%; margin: 0 10px; padding: 20px; border-radius: 5px; border: 1px solid #e2e6ea; margin-bottom: 30px; background: #fff; }
-.dedicated .card > h1 { padding: 33px 0 23px 0px; font-family: "Barlow Condensed", sans-serif; font-size: 60px; text-transform: uppercase; color: var(--col1); line-height: 29px; }
+.dedicated .card > h1 { padding: 33px 0 23px 0px; font-family: "Barlow Condensed", sans-serif; font-size: 60px; text-transform: uppercase; color: var(--col1); line-height: 29px; padding-top: 30px;}
 .dedicated .line { margin: 23px 0 52px 1px; border-bottom: 5px solid #4f4f4f; width: 180px; }
 .dedicated .card > p { line-height: 35px; padding-bottom: 38px; font-size: 22px; font-weight: normal; max-width: 541px; -webkit-font-smoothing: antialiased; -moz-font-smoothing: antialiased; -o-font-smoothing: antialiased; }
 .dedicated .card > button { margin-bottom: 51px; letter-spacing: -0.03px; }
@@ -73,10 +73,9 @@ input, select, textarea { font-size: 16px; font-family: "Montserrat", sans-serif
 .container .explore { padding: 0 40px; }
 .container .lineB { margin: 23px 0 52px 1px; border-bottom: 5px solid #4f4f4f; width: 180px; }
 .container .explore > h1 { margin-bottom: 23px; font-family: "Barlow Condensed", sans-serif; font-size: 60px; text-transform: uppercase; color: var(--col1); transition: 500ms; }
-.container .maps { display: flex; flex-direction: row; justify-content: space-evenly; flex-wrap: wrap; margin-bottom: 50px; gap: 1em; }
+.container .maps {  margin-bottom: 57px; display: flex; flex-direction: row; justify-content: space-evenly; flex-wrap: wrap; margin-bottom: 50px; gap: 1em; }
 .container .card1 { width: auto; display: flex; flex-direction: column; box-shadow: 0px 0px 9px #00000038; border-radius: 8px; border: 1px solid #e2e6ea; background: #f9f9f9 0% 0% no-repeat padding-box; opacity: 1; }
 .container .card-title { font-family: "Barlow Condensed", sans-serif; text-transform: uppercase; color: var(--col1); margin-bottom: 28px; font-size: 27px; }
-.container .maps { margin-bottom: 57px; }
 .container .card-body { padding: 28.3px 24px; }
 .container .card-body > p { font-size: 20px; margin-bottom: 14px; line-height: 29px; }
 .container .btn-explore { margin-bottom: 80.13px; }
